# Downwell.AI

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .taplo.toml  CHANGELOG.md  CLAUDE.md  LICENSE  NOTES.txt  README.md  RESEARCH.md  TODO.md  config.py  customEnv.py  dqnAgent.py  imageProcessing.py  install_cuda.bat  load.py  main.py  memExtractor.py  notes.txt  plotter.py  pyproject.toml  requirements.txt  ruff.toml  skills-lock.json  train.py  ty.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
image_cnn/: main.py
memoryStuff/: Cargo.toml  memory.cpp
memoryStuff/src/: lib.rs
scripts/: clean.sh  pin-actions.sh
src/: __main__.py  config.py  custom_env.py  dqn_agent.py  game_attributes.py  mem_extractor.py
src/agent/: network.py
src/agents/: dqn_agent.py  dqn_network.py  replay.py
src/core/: orchestrator.py  reward_calculator.py  vision.py
src/env/capture/: __init__.py  dxcam_capture.py  fast_capture.py
src/env/input/: __init__.py  direct_input.py  pynput_input.py
src/env/memory/: __init__.py  game_memory.py  game_ptrs.py  null_memory.py  pymem_memory.py
src/environment/: capture.py  game_env.py  mem_extractor.py
src/models/: action.py  game_state.py
src/threaders/: actor.py  perceptor.py  thinker.py
src/utils/: consts.py  exceptions.py  game_attributes.py
tests/: test_smoke.py
training/: pretrain.py  recorder.py
