[project]
name = "downwell-ai"
version = "1.0.3"
description = "DQN agent for the game Downwell"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    # faster than mss
    "fastgrab>=0.2.0; sys_platform == 'win32'",
    "fastgrab[wayland]>=0.2.0; sys_platform == 'linux'",
    "dxcam>=0.3.0; sys_platform == 'win32'",
    "gymnasium>=1.3.0",
    "loguru>=0.7.3",
    "msgspec>=0.7.3",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "psutil>=7.2.2; sys_platform == 'win32'",
    "pydirectinput-rgx>=2.1.3; sys_platform == 'win32'",
    "pygetwindow>=0.0.9; sys_platform == 'win32'",
    "pymem>=1.14.0; sys_platform == 'win32'",
    "pynput>=1.8.1; sys_platform == 'linux'",
    # so it works with gymnasium 1.3.0
    "stable-baselines3>=2.9.0a2",
    "tensorboard>=2.20.0",
    # pins for cuda 12.6 support
    "torch==2.7.1",
    "torchvision==0.22.1",
]

[project.optional-dependencies]
dev = ["ruff>=0.15.12", "ssort>=0.16.0", "ty>=0.0.34"]

[tool.uv]
prerelease = "allow"

# fastgrab needs numpy to build
[tool.uv.extra-build-dependencies]
fastgrab = ["numpy"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ty.environment]
python-version = "3.13"
