[project]
name = "downwell-ai"
version = "0.1.0rc"
requires-python = ">=3.13,<3.14"
description = "DQN agent for Downwell."
readme = "README.md"
dependencies = [
  "dxcam>=0.3.0; sys_platform == 'win32'",
  "gymnasium>=1.3.0",
  "loguru>=0.7.3",
  "msgspec>=0.21.1",
  "numpy>=2.4.4",
  "opencv-python>=4.13.0.92",
  "pydirectinput-rgx>=2.1.3; sys_platform == 'win32'",
  "pymemoryeditor>=1.6.0",
  "pynput>=1.8.2; sys_platform == 'linux'",
  "python-xlib>=0.33; sys_platform == 'linux'",
  "rtgym>=0.16",
  "tensorboard>=2.20.0",
  "torch==2.7.1",
  "torchvision==0.22.1",
]

[dependency-groups]
dev = [
  "hypothesis>=6.152.7",
  "pytest>=9.0.3",
  "ruff>=0.15.12",
  "ssort>=0.16.0",
  "ty>=0.0.35",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu126" }]
torchvision = [{ index = "pytorch-cu126" }]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = ["smoke: requires game running; skipped by default"]
addopts = ["-m", "not smoke", "--strict-markers"]
