[project]
name = "downwell-ai"
version = "0.1.0rc"
requires-python = ">=3.13,<3.14"
description = "DQN agent for Downwell."
readme = "README.md"
dependencies = [
  "gymnasium>=1.3.0",
  "loguru>=0.7.3",
  "msgspec>=0.21.1",
  "numpy>=2.4.4",
  "opencv-python>=4.13.0.92",
  "pymemoryeditor>=1.6.0",
  "rtgym>=0.16",
  "tensorboard>=2.20.0",
  "torch==2.9.1",
  "torchvision==0.24.1",
]

[dependency-groups]
dev = [
  "hypothesis>=6.152.4",
  "pytest>=9.0.3",
  "ruff>=0.15.12",
  "ssort>=0.16.0",
  "ty>=0.0.34",
  "taplo>=0.9.3",
]
linux = ["pynput>=1.8.1", "python-xlib>=0.33"]
windows = ["dxcam>=0.3.0", "pydirectinput-rgx>=2.1.3"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.uv]
exclude-newer = "7 days"

[tool.ruff]
src = ["./src", "./scripts", "./tests"]
target-version = "py313"
line-length = 160

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "INP001", # implicit-namespace-package (no module docstrings for now)
  "D100",   # undocumented-public-module (same here)
  "D104",   # undocumented-public-package (same here)
  "TD003",  # missing-todo-link (TODOs aren't tied to issues (yet))
  "FIX002", # line-contains-todo (i wanna sleep)
  "COM812", # missing-trailing-comma (formatter conflict)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 160

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
lines-after-imports = 2
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "D100",   # undocumented-public-module (no need for these in tests)
  "D103",   # undocumented-public-function (same)
  "INP001", # implicit-namespace-package (if tests become a package, remove)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 20
max-returns = 6
max-statements = 60

[tool.ty.environment]
root = ["."]
python-version = "3.13"

[tool.ty.rules]
possibly-unresolved-reference = "warn"
unresolved-import = "warn"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = ["smoke: requires game running; skipped by default"]
addopts = ["-m", "not smoke", "--strict-markers"]

[tool.taplo]
include = ["pyproject.toml"]

[[tool.taplo.rule]]
include = ["pyproject.toml"]
keys = ["dependencies", "*-dependencies"]

[tool.taplo.rule.formatting]
reorder_keys = true
